--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,35 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/*GOOGLE FONTS*/
+/*Nunito*/
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap");
+
+.title {
+  @apply font-black font-nunito text-white text-center text-2xl sm:text-4xl;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.displayTime {
+  @apply p-2 font-black text-white text-4xl select-none font-nunito;
 }
 
-* {
-  box-sizing: border-box;
+.btn {
+  @apply p-2 font-black text-white text-4xl  hover:text-gray-900 focus:outline-none;
+}
+
+.displaySessionContainer {
+  @apply my-4 w-11/12 sm:w-2/3 p-4 bg-gray-700 rounded-2xl flex flex-col justify-center items-center;
+}
+
+.lengthContainer {
+  @apply m-4 w-full sm:w-96 p-4 bg-gray-700 rounded-2xl;
+}
+
+.lengthBtnContainer {
+  @apply p-2 flex items-center justify-center;
+}
+
+.pomodoroClockContainer {
+  @apply w-full min-h-screen flex flex-col justify-center items-center;
 }
